--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<head>
-		<title>Page Title</title>
+		<title>Yoo bruh</title>
 	</head>
 	<body>
 		<h1>Woooohooow this is my first page :)</h1>
-		<p>This is a paragraph.</p>
+		<p>This is majd testing </p>
 	</body>
 </html>
